--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="../src/hide.js"></script>
+    <script src="../src/Components/functions/styleselectors.js"></script>
   </body>
 </html>
